# rusty_sand

./: .firebaserc  .gitignore  Cargo.toml  README.md  index.html  new.sand
.firebase/: hosting.ZGlzdA.cache
.xwin-cache/dl/: Microsoft.VC.14.38.17.8.CRT.Headers.base.vsix
.xwin-cache/unpack/Microsoft.VC.14.38.17.8.CRT.Headers.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.38.17.8.CRT.x64.Desktop.base.vsix/lib/x64/: libompd.lib  libvcruntimed.lib
.xwin-cache/unpack/Microsoft.VC.14.38.17.8.CRT.x64.Store.base.vsix/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_libs_x86_64.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_store_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_store_libs.msi/: tree.txt
.xwin-cache/unpack/ucrt.msi/: tree.txt
assets/: config.config
assets/cells/: blood.cell  blood_stone.cell  blood_stone.ron  donut_stone.cell  just_tap.cell  sand.cell  sand.ron  stone.cell  stone.ron  water.cell  water.ron
assets/shaders/: instancing.wgsl
docs/: index.html  rusty_sand-2f6973ce8254e97f.js
imported_assets/: log
imported_assets/Default/cells/: blood.cell  just_tap.cell  sand.cell
src/: assets.rs  components.rs  custom_renderer_plugin.rs  enums.rs  events.rs  lib.rs  main.rs  resources.rs  setup.rs  systems.rs  utils.rs
src/resources/: cell_world.rs
src/systems/: camera.rs  camera_movement.rs  cell_management.rs  input_handling.rs  physics.rs  player.rs  render.rs  ui_systems.rs  window_management.rs
