[package]
name = "rusty_sand"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.11.2", features = ["multi-threaded"]}
bevy-inspector-egui = "0.19.0"
fastrand = "2.0.0"
image = "0.24.7"
lazy_static = "1.4.0"
winit = "0.28.6"

[dependencies.bevy_egui]
version = "*"
default-features = false
features = ["default_fonts"]

[target.'cfg(target_os = "linux")'.dependencies]
bevy = {version = "0.11.3", features = ["multi-threaded", "dynamic_linking"]}

[target.'cfg(not(target_os = "linux"))'.dependencies]
bevy = {version = "0.11.3", features = ["multi-threaded"]}

[toolchain]
channel = "nightly"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[package.metadata.android]
package = "org.zuriefais.rusty_sand"
apk_name = "Rusty sand"
assets = "./assets"
resources = "./assets/android-res"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
#icon = "@mipmap/ic_launcher"
label = "Rusty sand"
