[package]
name = "rusty_sand"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.12.1", features = ["multi-threaded", "trace"]}
bevy-fps-counter = "0.3.0"
bevy-inspector-egui = "0.22.1"
bevy_enum_filter = "0.3.0"
bevy_mod_debugdump = "0.9.0"
bytemuck = "1.14.0"
fastrand = "2.0.0"
grid = "0.13.0"
image = "0.24.7"
lazy_static = "1.4.0"
ron = "0.8.1"
serde = "1.0.194"
strum = "0.25.0"
strum_macros = "0.25"
winit = "0.28.7"

[dependencies.bevy_egui]
version = "0.24"
default-features = false
features = ["default_fonts"]

[target.'cfg(target_os = "linux")'.dependencies]
bevy = {version = "0.12", features = ["multi-threaded", "dynamic_linking", "trace"]}

[target.'cfg(not(target_os = "linux"))'.dependencies]
bevy = {version = "0.12", features = ["multi-threaded", "trace"]}

[toolchain]
channel = "nightly"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[package.metadata.android]
package = "org.zuriefais.rusty_sand"
apk_name = "Rusty sand"
assets = "./assets"
resources = "./assets/android-res"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
#icon = "@mipmap/ic_launcher"
label = "Rusty sand"

[build]
rustflags = ["-Z", "threads=X"]
